--- a/YabsService/build.gradle
+++ b/YabsService/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':YabsCloudClient')
     compile project(':YabsCommon')
+    compile project(':YabsBeaconEngine')
 }
