--- a/YabsBeaconEngine/build.gradle
+++ b/YabsBeaconEngine/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "20.0.0"
+    buildToolsVersion '20.0.0'
 
     defaultConfig {
         applicationId "com.tomek.hackbeacontest.beaconengine"
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile files('libs/estimote-sdk-preview.jar','libs/estimote-sdk-preview-javadoc.jar')
-
+    compile files('libs/estimote-sdk-preview.jar')
+    compile files('libs/estimote-sdk-preview-javadoc.jar')
+    compile project(':android-beacon-library')
 }
